# hex

./: .gitignore  .travis.yml  Cargo.toml  README.md  conf.toml
cli/: Cargo.toml
cli/src/: audio.rs  main.rs  modify.rs  play.rs  store.rs  sync.rs
compile/: compile.sh  compile_libraries.sh
conf/: Cargo.toml
conf/src/: error.rs  lib.rs
database/: Cargo.toml  README.md
database/gossip/: Cargo.toml  error
database/gossip/src/: discover.rs  error.rs  lib.rs  local_ip.rs  protocol.rs  transition.rs
database/src/: create_db.sql  database.rs  error.rs  events.rs  file.rs  lib.rs  objects.rs  search.rs  transition.rs  utils.rs
frontend/: .babelrc  .gitignore  .webpack.config.babel.js.swp  README.md  package-lock.json  package.json  webpack.config.babel.js  webpack.config.js
frontend/src/: .index.js.swp  index.ejs  index.js
frontend/src/assets/: hex_server_protocol.js  hex_server_protocol_bg.wasm  icon_material.css
frontend/src/components/: app.js  header.js  header_action.js  home.js  input_suggest.js  play_button.js  search.js  sidebar.js  spinner.js  zyklop.js
frontend/src/components/header/: index.js  style.less
frontend/src/components/home/: .index.js.swp  index.js
frontend/src/components/music_player/: index.js  music_queue.js  music_queue_style.css  music_queue_style.less  progress.js  style_bottom.css  style_bottom.less
frontend/src/components/play_button/: index.js  style.less
frontend/src/components/playlist/: index.js  style.less  track.js
frontend/src/components/profile/: index.js
frontend/src/components/search/: index.js  style.less
frontend/src/components/sidebar/: index.js  style.less
frontend/src/components/spinner/: index.js  style.css
frontend/src/components/suggest_input/: index.js  style.less
frontend/src/components/track/: index.js  style.less
frontend/src/components/tracklist/: index.js  style.css  style.less  track.js
frontend/src/components/upload/: .index.js.swo  .index.js.swp  file.js  index.js  list.js  style.css  style.less  track.js  youtube.js
frontend/src/components/zyklop/: style.less
frontend/src/lib/: .protocol.js.swp  get_cover.js  hex_server_protocol.js  hex_server_protocol_bg.wasm  opus.wasm  player.js  protocol.js  resampler2.js  suggestions.js  upload.js  worker.js
frontend/src/lib/opus/: decoder.js  libopus.js  test.js  test.wasm
frontend/src/style/: header.css  header.less  header_action.css  home.less  input_suggest.css  playbutton.css  playbutton.less  playlist.css  search.css  sidebar.css  sidebar.less  zyklop.css
frontend_old/: .gitignore  package-lock.json  package.json  webpack.config.babel.js
frontend_old/src/: index.js
frontend_old/src/assets/: react-inline-suggest.css
frontend_old/src/assets/css/: accessible-autocomplete.min.css
frontend_old/src/components/header/: style.less
frontend_old/src/components/home/: index.js  style.less
frontend_old/src/components/music_player/: progress.less  style_bottom.less
frontend_old/src/components/profile/: index.js
frontend_old/src/components/search/: index.js
frontend_old/src/components/sidebar/: index.js
frontend_old/src/components/suggest_input/: index.js
frontend_old/src/components/tracklist/: track.js
frontend_old/src/components/upload/: index.js  list.js  style.less  track.js  youtube.js
frontend_old/src/components/zyklop/: index.js
frontend_old/src/lib/: bitmap.js  protocol.js  resampler.js  uuid.js  worker.js
frontend_old/src/style/: index.less
local-client/: Cargo.toml
local-client/src/: main.rs
music/: .gitignore  Cargo.toml
music-container/: .gitignore  Cargo.toml  README.md
music-container/src/: configuration.rs  error.rs  lib.rs
music/examples/: add_file.rs
music/src/: acousticid.rs  audio_file.rs  database.rs  error.rs  ffmpeg.rs  lib.rs  music_search.rs  opus_conv.rs
nightly-worker/: Cargo.toml
nightly-worker/src/: main.rs
odysseus/: Cargo.toml
server/: Cargo.toml  README.md  build.sh  conf.toml
server/protocol/: Cargo.toml
server/protocol/src/: error.rs  lib.rs  objects.rs
server/src/: acousticid.rs  conf.rs  error.rs  main.rs  proto.rs  server.rs  state.rs  webserver.rs
server/src/convert/: download.rs  ffmpeg.rs  mod.rs  opus.rs  youtube.rs
server/tmp/: ffmpeg.rs  proto.rs  state.rs  youtube.rs
src/: .proto.rs.swp  .state.rs.swp  cli.rs  conf.rs  error.rs  lib.rs  main.rs  proto.rs  protocol.rs  server.rs  state.rs  webserver.rs  youtube.rs
stream-client/: Cargo.toml
stream-client/src/: audio.rs  client.rs  control.rs  events.rs  main.rs  token.rs
sync/: Cargo.toml  README.md
sync/src/: discover.rs  lib.rs  local_ip.rs  sync.rs
sync/src/gossip/: mod.rs  protocol.rs
telegram/: Cargo.toml
telegram/src/: download.rs  error.rs  external.rs  main.rs  upload.rs
web/: .gitignore  Cargo.toml
web/protocol/: package-lock.json
web/protocol/src/: objects.rs  wasm.rs
web/src/: acousticid.rs  main.rs  server.rs  state.rs  webserver.rs
web/src/convert/: download.rs  mod.rs  opus.rs  youtube.rs
zyklop/: Cargo.toml
zyklop/src/: audio.rs  error.rs  events.rs  led.rs  main.rs  mplayer.rs  state.rs  token.rs
