[workspace]

members = [
    "conf",
    "database",
    "database/gossip",
    "music-container",
    "server",
    "server/protocol",
    "zyklop",
    "cli",
    "nightly-worker",
    "telegram"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s" 
debug = false
lto = true
