[workspace]

members = [
    "conf",
    "database",
    "database/gossip",
    "music-container",
    "web",
    "web/protocol",
    "zyklop",
    "cli",
    "nightly-worker",
    "telegram"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s" 
debug = false
lto = true
