[package]
name = "hex2"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"] }
metaflac = "0.2"
thiserror = "1.0"
#clap = { version = "2", default-features = false }

[lib]
name = "hex2"
path = "src/lib.rs"

#[[bin]]
#name = "hex-cli"
#path = "src/cli.rs"
