[package]
name = "hex-cli"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]

[dependencies]
getopts = "0.2"
tokio = "0.1"
futures = "0.1"
rb = "0.3"
cpal = "*"
nix = "0.11.0"
terminal_size = "0.1"
toml = "0.4"
serde = "1.0"

[dependencies.hex-music-container]
path = "../music-container/"

[dependencies.hex-database]
path = "../database/"
default_features = false
features = ["rusqlite", "hex-gossip", "serde"]
