[package]
name = "hex-cli"
edition = "2018"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]

[dependencies]
futures = "0.1"
getopts = "0.2"
rb = "0.3"
cpal = "*"
nix = "0.11.0"
terminal_size = "0.1"
hex-conf = { path = "../conf/" }
walkdir = "*"
id3 = "0.2"
chromaprint = { git = "https://github.com/bytesnake/rust-chromaprint" }

[dependencies.hex-music-container]
path = "../music-container/"

[dependencies.hex-database]
path = "../database/"
