[package]
name = "hex-cli"
edition = "2018"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]

[dependencies]
futures = "0.1"
tokio = {version = "0.1", default-features = false, features = ["io", "reactor", "tcp"] }
getopts = "0.2"
rb = "0.3"
cpal = "*"
nix = "0.11.0"
terminal_size = "0.1"
hex-conf = { path = "../conf/" }
walkdir = "*"
id3 = "0.2"
env_logger = "0.6"
log = "0.4"

[dependencies.hex-music-container]
path = "../music-container/"

[dependencies.hex-database]
path = "../database/"
