[package]
name = "hex-database"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]

[dependencies.rusqlite]
version = "0.14.0"
features = ["bundled"]
optional = true

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["rusqlite", "serde"]
