[package]
name = "hex-database"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]

[dependencies.rusqlite]
version = "0.14.0"
features = ["bundled"]
optional = true

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
sha2 = {version = "0.8", optional = true}
hex-gossip = { path = "./gossip/", optional = true }
bincode = {version = "1.0", optional = true }
futures = {version = "0.1", optional = true }
tokio = {version = "0.1", optional = true }
log = "0.4"

[dev-dependencies]
hex-conf = { path = "../conf/" }
simple_logger = "1"

[features]
default = ["rusqlite", "serde", "hex-gossip", "sha2", "bincode", "futures", "tokio"]
