[package]
name = "hex_music"
version = "0.1.0"
authors = ["bytesnake <bytesnake@mailbox.org>"]

[dependencies]                                                            
rusqlite = "0.12.0"
curl = "0.4.8"
opus = "0.2.0"
sample = "0.7.1"
hound = "3.2.0"
log = "0.3.8"
simple_logger = "0.4.0"
serde_json = "1.0.4"
serde = "1.0"
serde_derive = "1.0"
uuid = {version="0.4", features = ["v4"]}
failure = "0.1"
failure_derive = "0.1"
futures = "0.1.14"
tokio-core = "0.1"
tokio-io = "0.1.3"
tokio-process = "0.1.4"
bytes = "0.4.5"



[dependencies.chromaprint]
git = "https://github.com/bytesnake/rust-chromaprint"

[dev-dependencies]
cursive = { git = "https://github.com/gyscos/Cursive" }
