[package]
name = "hex-server"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]

[dependencies]
websocket = "0.20"
futures = "0.1.14"
tokio-core = "0.1"
tokio-io = "0.1.3"
tokio-process = "0.1.4"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
hyper = "0.12"
hyper-staticfile = "0.3"
http = "0.1.5"
bytes = "0.4.5"
curl = { version = "0.4", default-features = false }
base64 = "0.10.0"
tempfile = "3"
sha2 = "0.8"

[dependencies.chromaprint]
git = "https://github.com/bytesnake/rust-chromaprint"

[dependencies.hex-music-container]
path = "../music-container/"

[dependencies.hex-database]
path = "../database/"

[dependencies.hex-sync]
path = "../sync/"

[dependencies.hex-server-protocol]
path = "protocol/"
features = ["server"]

[patch.crates-io]
openssl-sys = "0.10"
