[package]
name = "hex-stream-client"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]

[dependencies]
spidev = "0.2.1"
sysfs_gpio = "0.5"
rb = "0.3"
websocket = "0.20"
cpal = "*"
rand = "0.5"

[dependencies.hex-server-protocol]
path = "../server/protocol/"
features = ["client"]

[dependencies.hex-database]
path = "../database/"
features = ["serde"]
default_features = false

[dependencies.mfrc522]
git = "https://github.com/emkw/rust-MFRC522.git"
features = ["spidev"]

#[dependencies.cpal]
#path = "/home/lorenz/Downloads/cpal/"
