[package]
name = "hex-telegram"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-database = { path = "../database/" }
hex-conf = { path = "../conf/" }
hex-music-container = { path = "../music-container" }
futures = {version = "0.1" }
tokio = {version = "0.1", default-features = false, features = ["io", "reactor", "tcp"] }
hyper = "0.12"
failure = "0.1.1"
rspotify = "0.6"
mp3-metadata = "0.3"
env_logger = "0.6"
telebot = { git = "https://github.com/bytesnake/telebot" }
#telebot = { path = "/home/lorenz/Documents/projects/telebot/" }
threadpool = "1.7"
log = "0.4"
