[package]
name = "hex-zyklop"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]

[dependencies]
spidev = "0.2.1"
sysfs_gpio = "0.5"
rb = "0.3"
cpal = "*"
rand = "0.5"

hex-music-container = { path = "../music-container" }

[dependencies.hex-database]
path = "../database/"

[dependencies.mfrc522]
git = "https://github.com/emkw/rust-MFRC522.git"
features = ["spidev"]
