[package]
name = "hex-server-protocol"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
cfg-if = "0.1.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for 
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.hex-database]
path = "/home/lorenz/Documents/projects/hex/database/"
features = ["serde"]
default_features = false

[features]

server = []
client = []
